@@ -87,7 +87,8 @@ class EditWindow(stc.StyledTextCtrl):
         self.autoCompleteIncludeDouble = True
         self.autoCompleteCaseInsensitive = True
         self.AutoCompSetIgnoreCase(self.autoCompleteCaseInsensitive)
-        self.AutoCompSetAutoHide(False)
+        self.autoCompleteAutoHide = True
+        self.AutoCompSetAutoHide(self.autoCompleteAutoHide)
         self.AutoCompStops(' .,;:([)]}\'"\\<>%^&+-=*/|`')
         # Do we want to automatically pop up command argument help?
         self.autoCallTip = True
